# price-trackr

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  price-trackr.code-workspace
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  alerts.py  products.py  sales.py  users.py
backend/app/crud/: prices.py  products.py  users.py
backend/app/models/: price_log.py  product.py  user.py
backend/app/schemas/: price_schema.py  product_schema.py  user_schema.py
backend/app/services/: alerts_service.py  sale_detector.py  scraper_sync.py
backend/app/tests/: test_api.py  test_db.py
backend/app/utils/: logger.py  response.py  validators.py
backend/app/websocket/: tracker_ws.py
docs/: api-reference.md  deployment-guide.md  roadmap.md  scraper-guide.md  system-architecture.md
extension/: background.js  content_script.js  manifest.json
extension/popup/: index.html  popup.js  styles.css
frontend/: Dockerfile  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.d.ts  vite.config.d.ts.map  vite.config.js  vite.config.js.map  vite.config.ts
frontend/src/: App.d.ts.map  App.js  App.js.map  App.tsx  index.css  main.d.ts.map  main.js  main.js.map  main.tsx
frontend/src/api/: alertApi.d.ts  alertApi.d.ts.map  alertApi.js  (+17 more)
infra/: docker-compose.yml
infra/nginx/: site.conf
infra/systemd/: price-trackr.service
worker/: Dockerfile  requirements.txt
worker/playwright_scraper/: base_scraper.py  runner.py
(+148 files in other folders)
